First Change for Bitbucket

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-6 col-sm-6 col-md-6 offset-3">
       <p>
-        Copyright © 2020, StepsAtFeet, Inc. "StepsAtFeet"
-        and logo are registered trademarks of StepsAtFeet, Inc
+        Copyright © 2020, FootOnStep, Inc. "FootOnStep"
+        and logo are registered trademarks of FootOnStep, Inc
       </p>
     </div>
   </div>
